# ImagineAI

./: .gitignore  README.md  package-lock.json  package.json  server.py  start.sh
scripts/: ai.wintrip.ImagineAI.desktop  launch-desktop.sh  make_icon.py  prepare-tauri-assets.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: test_atlas.py  test_image_uploads.py  test_modelslab.py  test_seedance.py  test_xai.py
web/: index.html  main.js  state.js  styles.css
web/services/: api.js  image-gen.js  video-gen.js
web/ui/: gallery-view.js  history-view.js  prompt-view.js  settings-view.js  tabs-view.js  toast-view.js  video-gallery-view.js  video-prompt-view.js
