[package]
name = "imagineai"
version = "1.0.0"
description = "ImagineAI local image & video studio desktop shell"
authors = ["WintripAI"]
edition = "2021"

[lib]
name = "imagineai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
